@@ -1,3 +1,4 @@
+	* fix a bunch of typos in python bindings
 	* make get_settings available in the python binding regardless of deprecated functions
 	* fix typo in python settings binding
 	* fix possible dangling pointer use in peer list
